# qwen-code

docs/: qwen-usage.md
qwenfastapi/: README.md  anthropic.py  main.py  pyproject.toml  requirements.txt
qwenfastapi/tests/: conftest.py  test_anthropic.py  test_server.py
