[project]
name = "qwenfastapi"
version = "0.1.0"
description = "Standalone FastAPI proxy for Qwen models"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "respx",
]

[project.scripts]
qwenfastapi = "qwenfastapi.main:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["qwenfastapi"]
package-dir = {"qwenfastapi" = "."}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
